<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textoInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoInicial"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/preferenciasMelodia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/preferenciasMelodia"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/preferenciasMelodia"
        android:layout_width="239dp"
        android:layout_height="437dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio0"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio4"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/botonCancelar"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:backgroundTint="#B6AEAE"
        android:onClick="onCancelar"
        android:text="@string/botonCancelar"
        android:textColor="#070303"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/preferenciasMelodia"
        app:layout_constraintTop_toBottomOf="@+id/preferenciasMelodia"
        app:layout_constraintVertical_bias="0.424" />

    <Button
        android:id="@+id/botonAceptar"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:backgroundTint="#B6AEAE"
        android:onClick="onAceptar"
        android:text="@string/botonAceptar"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/preferenciasMelodia"
        app:layout_constraintTop_toBottomOf="@+id/preferenciasMelodia"
        app:layout_constraintVertical_bias="0.417" />
</androidx.constraintlayout.widget.ConstraintLayout>